Fix flex wrapping in stupid Safari

--- a/assets/styl/components/portfolio.styl
+++ b/assets/styl/components/portfolio.styl
@@ -12,11 +12,11 @@
 
 .portfolio-item
     box-shadow 0 0 1px rgba(0,0,0,0.3)
-    flex 1
+    flex 1 0 auto
     margin 0 10px 20px
     min-height 180px
-    min-width 300px
     position relative
+    width 300px
 
 .portfolio-item-img
     // always full width, even if the container is bigger than the image
